--- a/client/style/style.css
+++ b/client/style/style.css
@@ -5,10 +5,12 @@
 .search-title {
   margin-top: 60px;
   margin-bottom: 20px;
-  font-family: 'Special Elite', cursive;
-  font-weight: 400;
+  font-family: 'Patua One', cursive;
+  font-weight: 100 !important;
   font-size: 48px;
   text-align: center;
+  text-decoration: none !important;
+  color: #939292 !important;
 }
 
 .search-bar {
