--- a/client/style/style.css
+++ b/client/style/style.css
@@ -24,3 +24,24 @@
 .search-form button {
   margin-left: 5px;
 }
+
+.movie-details {
+    display: flex;
+    width: 800px;
+    margin-bottom: 50px;
+    margin-top: 30px;
+}
+
+.movie-img {
+    margin-right: 20px;
+    height: 450px;
+}
+
+.movie-details-th {
+    width: 20%;
+    text-align: right !important;
+}
+
+.movie-details-td {
+    width: 80%;
+}
